# MRLM

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GPU_QUICK_REFERENCE.txt  INSTALL.md  INSTALL_FIX.md  LICENSE  MANIFEST.in  PHASE3_COMPLETE.md  PHASE8_COMPLETE.md  README.md  RELEASE.md  SFT_IMPLEMENTATION.md  STATUS.md  play.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
configs/: code_generation_ppo.yaml  math_grpo.yaml  math_reasoning_ppo.yaml  preference_dpo.yaml  quick_start.yaml  sft_world_model.yaml
docs/: GPU_SELECTION.md  README.md  conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: algorithms.rst  cli.rst  config.rst  core.rst  distributed.rst  environments.rst
examples/: README.md  gpu_selection_example.py  train_distributed_ppo.py  train_dpo_preferences.py  train_from_config.py  train_grpo_math.py  train_hybrid_sft_ppo.py  train_multi_environment.py  train_sft_world_model.py  train_tool_use_ppo.py
examples/code_generation/: train_code_ppo.py
examples/demo_e2e/: DEMO_SUMMARY.md  README.md  demo_complete.py  run_demo.sh  synthetic_data_generator.py  test_demo.py
examples/math_reasoning/: train_math_ppo.py
examples/quickstart/: phase1_test.py  simple_ppo.py
src/mrlm/: __init__.py
src/mrlm/algorithms/: __init__.py  base_trainer.py
src/mrlm/algorithms/dpo/: __init__.py  dataset.py  loss.py  trainer.py
src/mrlm/algorithms/grpo/: __init__.py  loss.py  trainer.py
src/mrlm/algorithms/ppo/: __init__.py  config.py  loss.py  trainer.py
src/mrlm/algorithms/sft/: __init__.py  dataset.py  loss.py  trainer.py
src/mrlm/cli/: __init__.py  commands.py  main.py  utils.py
src/mrlm/client/: __init__.py  environment_client.py
src/mrlm/config/: __init__.py  parser.py  training_config.py
src/mrlm/core/: __init__.py  base.py  llm_environment.py  simulated_environment.py  types.py
src/mrlm/data/: __init__.py  buffer.py
src/mrlm/distributed/: __init__.py  ddp.py  fsdp.py  gpu_utils.py  setup.py  utils.py
src/mrlm/environments/: __init__.py
src/mrlm/environments/code/: __init__.py  code_env.py  executor.py
src/mrlm/environments/debate/: __init__.py  debate_env.py  judge.py
src/mrlm/environments/math/: __init__.py  math_env.py
src/mrlm/environments/tools/: __init__.py  builtin_tools.py  tool_env.py
src/mrlm/models/: __init__.py  generation.py  hf_model.py
src/mrlm/protocols/: compile_proto.py  mrlm.proto
src/mrlm/server/: __init__.py  environment_server.py
tests/: README.md  __init__.py  conftest.py
tests/algorithms/: test_dpo.py  test_grpo.py  test_ppo.py  test_sft.py
tests/cli/: test_commands.py
tests/config/: test_training_config.py
tests/core/: test_base.py  test_llm_environment.py  test_types.py
tests/distributed/: __init__.py  test_utils.py
tests/environments/: test_code.py  test_debate.py  test_math.py  test_tools.py
tests/integration/: test_end_to_end.py
